@@ -1,5 +1,6 @@
 UNRELEASED CHANGES:
 
+* Add ability to define the default email address used for support
 * Fix confirm email sent when signup_double_optin is false
 * Fix now() without timezone functions
 
